# invoice-nlp

./: CMakeLists.txt  run.sh  testcol.sh  testrow.sh
WBMasonData/A/: 0050.csv  0116.csv  0139.csv  files.txt
WBMasonData/E/: 0004.csv  0043.csv  0079.csv  0081.csv  0082.csv  0083.csv  0085.csv  0086.csv  0088.csv  0114.csv  0117.csv  0129.csv  0135.csv  0164.csv  0165.csv  0166.csv  0173.csv  0175.csv  0176.csv  0179.csv  0180.csv  0181.csv  0182.csv  0185.csv  0186.csv  0187.csv  0188.csv  0189.csv  0190.csv  0192.csv  0193.csv  0196.csv  0197.csv  0198.csv  0199.csv  0200.csv  0201.csv  0202.csv  files.txt  run.sh
crfpp/: aclocal.m4  alo.txt  crf_learn  data.txt  ltmain.sh  output-test-col.txt  output-test-row.txt  pricerightcol  pricerightrow  runtraintest.sh  template  testdata-col.txt  testdata-row.txt  traindata-col.txt  traindata-row.txt
crfpp/doc/: index.html
crfpp/inputcol/: OD0-preprocessed.png.txt  OD3-preprocessed.png.txt  OD4-preprocessed.png.txt  WB1-preprocessed.png.txt  WB4-preprocessed.png.txt
crfpp/inputdir/: OD1-preprocessed.png.txt  WB0-preprocessed.png.txt  WB4-preprocessed.png.txt
crfpp/inputrow/: OD2-preprocessed.png.txt  OD3-preprocessed.png.txt  OD4-preprocessed.png.txt
crfpp/outputcol/: OD0-preprocessed.png.txt  (+8 more)
inputdir/: OD2-preprocessed.png.json  OD3-preprocessed.png.json  OD4-preprocessed.png.json  files.txt  files2.txt  priceright
outputdir/: data.txt
src/: VerticalProfiles.cpp  VerticalProfiles.h  main.cpp  testcrf.cpp  testcrf.h  traincrf.cpp  traincrf.h  visualize.cpp  visualize.h
testdata/: OD0-preprocessed.txt
(+56 files in other folders)
